--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,15 @@
-target/
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-pom.xml.next
-release.properties
-dependency-reduced-pom.xml
-buildNumber.properties
-.mvn/timing.properties
-# https://github.com/takari/maven-wrapper#usage-without-binary-jar
-.mvn/wrapper/maven-wrapper.jar
+/target/
+
+# Eclipse and Maven
+.classpath
+.project
+bin
+target
+.cache
+
+# Intellij
+.idea
+# Intellij recommends to share iml files, however, better don't share files which might be outdated
+*.iml
+# Default ignored files
+/workspace.xml
