--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,13 @@ language: java
 matrix:
   include:
     - jdk: openjdk11
+
+addons:
+  sonarcloud:
+    organization: exasol
+
 script:
-  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install -Dsonar.projectKey=com.exasol:hamcrest-resultset-matcher -Dsonar.login=${SONAR_TOKEN}
+  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
 cache:
   directories:
     - "$HOME/.m2"
