--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.exasol</groupId>
     <artifactId>hamcrest-resultset-matcher</artifactId>
-    <version>1.5.1</version>
+    <version>1.5.2</version>
     <name>Matcher for SQL Result Sets</name>
     <description>This project provides hamcrest matcher that compares java.sql.ResultSet objects.</description>
-    <url>https://github.com/exasol/hamcrest-resultset-matcher</url>
+    <url>https://github.com/exasol/hamcrest-resultset-matcher/</url>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -300,7 +299,7 @@
             <plugin>
                 <groupId>com.exasol</groupId>
                 <artifactId>project-keeper-maven-plugin</artifactId>
-                <version>1.2.0</version>
+                <version>2.6.2</version>
                 <executions>
                     <execution>
                         <goals>
@@ -390,4 +389,10 @@
             </plugin>
         </plugins>
     </build>
+    <parent>
+        <artifactId>hamcrest-resultset-matcher-generated-parent</artifactId>
+        <groupId>com.exasol</groupId>
+        <version>1.5.2</version>
+        <relativePath>pk_generated_parent.pom</relativePath>
+    </parent>
 </project>
