--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ bin
 target
 .cache
 *.log
+.settings/org.eclipse.core.resources.prefs
 
 # Intellij
 .idea
@@ -14,3 +15,19 @@ target
 *.iml
 # Default ignored files
 /workspace.xml
+.DS_Store
+*.swp
+local
+.dbeaver*
+**/*.log
+.directory
+venv/
+dependency-reduced-pom.xml
+pom.xml.versionsBackup
+~*
+*.lock
+*.bak
+*.orig
+*.old
+*.md.html
+*.flattened-pom.xml
