--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ target
 .cache
 *.log
 .settings/org.eclipse.core.resources.prefs
+.settings/org.eclipse.m2e.core.prefs
+.settings/org.eclipse.jdt.apt.core.prefs
 
 # Intellij
 .idea
