--- a/pom.xml
+++ b/pom.xml
@@ -40,8 +40,7 @@
         <dependency>
             <groupId>org.apache.derby</groupId>
             <artifactId>derby</artifactId>
-            <version>10.16.1.1</version>
-            <!-- Versions >= 10.16 require Java 17. -->
+            <version>10.15.2.0</version> <!-- Versions >= 10.16 require Java 17. -->
             <scope>test</scope>
         </dependency>
         <dependency>
