--- a/pom.xml
+++ b/pom.xml
@@ -2,14 +2,20 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>hamcrest-resultset-matcher</artifactId>
-    <version>1.6.3</version>
+    <version>1.6.4</version>
     <name>Matcher for SQL Result Sets</name>
     <description>This project provides hamcrest matcher that compares java.sql.ResultSet objects.</description>
     <url>https://github.com/exasol/hamcrest-resultset-matcher/</url>
     <properties>
         <junit.version>5.10.1</junit.version>
+        <testcontainers.version>1.19.3</testcontainers.version>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>com.exasol</groupId>
+            <artifactId>error-reporting-java</artifactId>
+            <version>1.0.1</version>
+        </dependency>
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest</artifactId>
@@ -37,24 +43,19 @@
         <dependency>
             <groupId>com.exasol</groupId>
             <artifactId>exasol-testcontainers</artifactId>
-            <version>6.6.3</version>
+            <version>7.0.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>junit-jupiter</artifactId>
-            <version>1.19.2</version>
+            <version>${testcontainers.version}</version>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.exasol</groupId>
-            <artifactId>error-reporting-java</artifactId>
-            <version>1.0.1</version>
         </dependency>
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>jdbc</artifactId>
-            <version>1.19.2</version>
+            <version>${testcontainers.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -63,7 +64,7 @@
             <plugin>
                 <groupId>com.exasol</groupId>
                 <artifactId>project-keeper-maven-plugin</artifactId>
-                <version>2.9.16</version>
+                <version>3.0.0</version>
                 <executions>
                     <execution>
                         <goals>
@@ -72,12 +73,23 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.sonatype.ossindex.maven</groupId>
+                <artifactId>ossindex-maven-plugin</artifactId>
+                <configuration>
+                    <skip>${ossindex.skip}</skip>
+                    <excludeVulnerabilityIds>
+                        <!-- org.apache.derby:derby is only used in tests. Later versions require Java 17 or later. -->
+                        <exclude>CVE-2022-46337</exclude>
+                    </excludeVulnerabilityIds>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
     <parent>
         <artifactId>hamcrest-resultset-matcher-generated-parent</artifactId>
         <groupId>com.exasol</groupId>
-        <version>1.6.3</version>
+        <version>1.6.4</version>
         <relativePath>pk_generated_parent.pom</relativePath>
     </parent>
 </project>
