--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -25,6 +25,11 @@ jobs:
         run: |
           sudo rm -rf /usr/local/lib/android
           sudo rm -rf /usr/share/dotnet
+      - name: Debugging
+        run: |
+          df -h
+          docker info
+          docker ps
       - name: Checkout the repository
         uses: actions/checkout@v4
         with:
